@@ -1073,16 +1073,10 @@ main (int argc, char *argv[])
   bind_textdomain_codeset (GETTEXT_PACKAGE, "UTF-8");
   textdomain (GETTEXT_PACKAGE);
 
-  group = g_option_group_new ("gnome-screenshot",
-		  	      _("Options for Screenshot"),
-			      _("Show Screenshot options"),
-			      NULL, NULL);
-  g_option_group_add_entries (group, entries);
-
   context = g_option_context_new (_("Take a picture of the screen"));
   g_option_context_set_ignore_unknown_options (context, FALSE);
   g_option_context_set_help_enabled (context, TRUE);
-  g_option_context_set_main_group (context, group);
+  g_option_context_add_main_entries (context, entries, GETTEXT_PACKAGE);
 
   program = gnome_program_init ("gnome-screenshot", VERSION,
 				LIBGNOMEUI_MODULE,
